# cerbos-query-plan-adapters

./: .gitignore  README.md
.github/workflows/: generate_release.yml
opensearch/: README.md  pyproject.toml  pytest.ini
opensearch/src/cerbos_opensearch/: __init__.py  query.py
opensearch/tests/: conftest.py  test_query.py
policies/: resource.yaml
