[project]
name = "cerbos-opensearch"
description = "Opensearch adapter for generating queries with Cerbos: an open core, language-agnostic, scalable authorization solution"
dependencies = [
    "cerbos>=0.10.0",
    "opensearch-py>=2.2.0",
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]

[project.urls]
Homepage = "https://cerbos.dev"
Repository = "https://github.com/lucernahealth/cerbos-query-plan-adapters/tree/main/opensearch"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]

[tool.pdm]

[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
    "docker>=6.1.3",
    "testcontainers>=3.5.3",
    "backoff>=2.2.1",
]
lint = [
    "black>=22.6.0",
    "isort>=5.10.1",
]

[tool.pdm.scripts]
test = "pytest"
isort = {cmd = "isort ."}
black = {cmd = "black ."}
format = {composite = ["isort", "black"]}

[tool.isort]
profile = 'black'
